[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Erazem Kos <erazem.kos@hotmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
